// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndexSearch /> children is called as function when open 1`] = `
<IndexSearchstyles__StyledIndexSearch>
  <DropDownContent
    contentOnly={false}
    inputContent=""
    inputProps={
      Object {
        "onChange": [Function],
        "onFocus": [Function],
        "placeholder": undefined,
        "value": "",
      }
    }
    maskProps={
      Object {
        "data-empty": true,
      }
    }
    showArrow={false}
    showContent={true}
    showInput={true}
    showRawInput={true}
  >
    <IndexSearchstyles__IndexSearchResults />
  </DropDownContent>
</IndexSearchstyles__StyledIndexSearch>
`;

exports[`<IndexSearch /> render matches snapshot 1`] = `
<IndexSearchstyles__StyledIndexSearch>
  <DropDownContent
    contentOnly={false}
    inputContent=""
    inputProps={
      Object {
        "onChange": [Function],
        "onFocus": [Function],
        "placeholder": undefined,
        "value": "",
      }
    }
    maskProps={
      Object {
        "data-empty": true,
      }
    }
    showArrow={false}
    showInput={true}
    showRawInput={true}
  />
</IndexSearchstyles__StyledIndexSearch>
`;

exports[`<IndexSearch /> render matches snapshot 2`] = `
<IndexSearchstyles__StyledIndexSearch>
  <DropDownContent
    contentOnly={false}
    inputContent=""
    inputProps={
      Object {
        "onChange": [Function],
        "onFocus": [Function],
        "placeholder": undefined,
        "value": "",
      }
    }
    maskProps={
      Object {
        "data-empty": true,
      }
    }
    showArrow={false}
    showContent={true}
    showInput={true}
    showRawInput={true}
  >
    <IndexSearchstyles__IndexSearchResults />
  </DropDownContent>
</IndexSearchstyles__StyledIndexSearch>
`;

exports[`<IndexSearch /> render matches snapshot 3`] = `
<IndexSearchstyles__StyledIndexSearch>
  <IndexSearchstyles__IndexSearchLabel>
    with label
  </IndexSearchstyles__IndexSearchLabel>
  <DropDownContent
    contentOnly={false}
    inputContent=""
    inputProps={
      Object {
        "onChange": [Function],
        "onFocus": [Function],
        "placeholder": undefined,
        "value": "",
      }
    }
    maskProps={
      Object {
        "data-empty": true,
      }
    }
    showArrow={false}
    showInput={true}
    showRawInput={true}
  />
</IndexSearchstyles__StyledIndexSearch>
`;

exports[`<IndexSearch /> render matches snapshot 4`] = `
<IndexSearchstyles__StyledIndexSearch>
  <DropDownContent
    contentOnly={false}
    inputContent=""
    inputProps={
      Object {
        "onChange": [Function],
        "onFocus": [Function],
        "placeholder": undefined,
        "value": "",
      }
    }
    maskProps={
      Object {
        "data-empty": true,
      }
    }
    showArrow={false}
    showInput={true}
    showRawInput={true}
  />
</IndexSearchstyles__StyledIndexSearch>
`;

exports[`<IndexSearch /> render matches snapshot 5`] = `
<IndexSearchstyles__StyledIndexSearch>
  <DropDownContent
    contentOnly={false}
    inputContent=""
    inputProps={
      Object {
        "onChange": [Function],
        "onFocus": [Function],
        "placeholder": undefined,
        "value": "",
      }
    }
    maskProps={
      Object {
        "data-empty": true,
      }
    }
    showArrow={false}
    showInput={true}
    showRawInput={true}
  />
</IndexSearchstyles__StyledIndexSearch>
`;

exports[`<IndexSearch /> render matches snapshot 6`] = `
<IndexSearchstyles__StyledIndexSearch>
  <DropDownContent
    contentOnly={false}
    inputContent="default value"
    inputProps={
      Object {
        "onChange": [Function],
        "onFocus": [Function],
        "placeholder": undefined,
        "value": "default value",
      }
    }
    maskProps={
      Object {
        "data-empty": false,
      }
    }
    showArrow={false}
    showInput={true}
    showRawInput={true}
  />
</IndexSearchstyles__StyledIndexSearch>
`;

exports[`<IndexSearch /> render matches snapshot 7`] = `
<IndexSearchstyles__StyledIndexSearch>
  <DropDownContent
    contentOnly={false}
    inputContent=""
    inputProps={
      Object {
        "onChange": [Function],
        "onFocus": [Function],
        "placeholder": undefined,
        "value": "",
      }
    }
    maskProps={
      Object {
        "data-empty": true,
      }
    }
    showArrow={false}
    showContent={true}
    showInput={true}
    showRawInput={true}
  >
    <IndexSearchstyles__IndexSearchResults />
  </DropDownContent>
</IndexSearchstyles__StyledIndexSearch>
`;

exports[`<IndexSearch /> render returns nothing with empty indexes 1`] = `""`;
